# Zookeeper

./: .gitignore  README.md  design.drawio  docker-compose.yaml  pyproject.toml  requirements.txt
prototype/: app.py
prototype/core/: getdata.py
prototype/storage/: connect.py
tests/: create_topic.py  delete_topic.py
