[project]
name = "zookeeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.6.0",
    "dbt-core==1.8.5",
    "dbt-postgres==1.8.2",
    "fastapi==0.112.2",
    "pandas==2.2.2",
    "psycopg2==2.9.9",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "selenium==4.23.1",
    "six>=1.16.0",
    "sqlalchemy==2.0.32",
    "uvicorn==0.30.6",
]
